# elara-kv-component

./: .gitignore  API.md  Cargo.toml  README.md  a.out  foo.json
.github/workflows/: ci.yml  release.yml  test.yml
clientTests/: index.ts  package.json  tsconfig.json  ws.ts
scripts/: clippy.sh
src/: client.rs  cmd.rs  compression.rs  config.rs  error.rs  lib.rs  message.rs  misc.rs  rpc_client.rs  service.rs  session.rs  util.rs  websocket.rs
src/kafka_api/: mod.rs
src/kusama/: mod.rs
src/polkadot/: client.rs  consts.rs  mod.rs  rpc_client.rs  service.rs  session.rs  subscription.rs  util.rs
src/polkadot/rpc_api/: chain.rs  grandpa.rs  mod.rs  state.rs
src/rpc_api/: chain.rs  mod.rs  state.rs
src/substrate/: client.rs  handlers.rs  handles.rs  mod.rs  request_handler.rs  rpc.rs  rpc_client.rs  service.rs  session.rs
src/substrate/dispatch/: impls.rs  mod.rs
src/substrate/kusama/: mod.rs
src/substrate/polkadot/: mod.rs  rpc_client.rs
tests/: common.rs  lib.rs  test_multi_clients.rs  test_one_conn_unsubscribe.rs  test_unsubscribe.rs
