[package]
name = "elara-kv-component"
version = "0.1.0"
authors = ["Patract Labs <https://github.com/patractlabs>"]
edition = "2018"
description = "Elara KV component for subscribing substrate node data"
readme = "README.md"

[dependencies]
anyhow = "1.0"
async-jsonrpc-client = "0.3"
env_logger = "0.9"
futures = "0.3"
jsonrpc-pubsub = "18.0"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3"
tokio = { version = "1.10", features = ["full"] }
tokio-tungstenite = { version = "0.15", features = ["connect", "rustls-tls", "stream"] }
toml = "0.5"
async-trait = "0.1.51"
flate2 = "1.0.20"
once_cell = "1.7"

[[bin]]
name = "elara-kv"
path = "bin/main.rs"

[features]
test_unsubscribe = []
test_multi_clients = []
test_one_conn_unsubscribe = []
